Add Post Object

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,9 @@
 # This is the configuration used to check the rubocop source code.
 
+AllCops:
+  Exclude:
+    - 'demo/**/*'
+
 Metrics/LineLength:
   Max: 100
   Enabled: false
